--- a/client/src/Footer.css
+++ b/client/src/Footer.css
@@ -1,9 +1,5 @@
 .footer {
-    // position: absolute;
-    //bottom: 0;
-  //left: bbb0;
-  //right: 0;
-  //padding: 3rem;
+  padding: 1rem;
 
   background-color: black;
   color: white;
