--- a/client/src/Faq.css
+++ b/client/src/Faq.css
@@ -1,10 +1,18 @@
-.Banner{
-    background-color: #2196F3;
-    height: 150px;
+.faqBanner{
+    background:url("./images/FAQ.png");
+    margin:15rem;
+    padding-top:10rem;
+    padding-bottom:8rem;
+    margin-top:-20px;
+    margin-bottom:4rem;
+    background-size:100% 100%;
 }
 
-.Banner h1{
-    color:white;
-    font-size:30px;
+.faqBanner h1{
+    color:#616162;
+    font-size:5rem;
     text-align:center;
+    
+
+//    display:inline-block;
 }
