--- a/client/src/Info.css
+++ b/client/src/Info.css
@@ -14,3 +14,14 @@
     font-size:5rem;
     text-align:center;
 }
+
+#infoLeft{
+    margin-top:2rem;
+    margin-right:3rem;
+    border-right:0.2rem solid  black;
+}
+
+#infoLeft li{
+    font-size:2rem;
+    font-weight: bold;
+}
