--- a/client/src/Faq.css
+++ b/client/src/Faq.css
@@ -1,18 +1,5 @@
-.faqBanner{
-    background:url("./images/FAQ.png");
-    margin:15rem;
-    padding-top:10rem;
-    padding-bottom:8rem;
+.faqImg{
     margin-top:-20px;
-    margin-bottom:4rem;
-    background-size:100% 100%;
+    margin-bottom:2rem;
 }
 
-.faqBanner h1{
-    color:#616162;
-    font-size:5rem;
-    text-align:center;
-    
-
-//    display:inline-block;
-}
