Add NewConstruction. Update HouseListItem and Label style

--- a/client/src/NewListing.css
+++ b/client/src/NewListing.css
@@ -1,6 +1,7 @@
-#labels {
+.labels {
   margin: 1rem auto;
-  padding: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 
   display: flex;
   flex-direction: row;
