--- a/client/src/HouseListItem.css
+++ b/client/src/HouseListItem.css
@@ -1,30 +1,28 @@
 #item {
-  padding: 3rem;
-  border-bottom: 1px solid black;
+  padding: 2rem;
+  border-top: 1px solid;
 }
 
-#item .price {
+.price {
   color: orange;
   font-size: 4rem;
 }
 
-#item .description {
+.description {
   font-size: 2rem;
   color: gray;
 }
 
-#item .type {
+.type {
   font-size: 2rem;
   font-weight: bold;
   color: gray;
 }
 
-#item .address {
+.address {
   color: #2196F3;
 }
 
-.custom-label {
-  background-color: #4CAF50;
-  margin-right: 1rem;
-  padding: 0.5rem;
+#house-image {
+  margin: 5rem auto;
 }
