--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,3 @@
-.nav p{
-  font-size: 2rem;
-  color: #2196F3;
-  margin: auto;
-}
-
 #site {
   display: flex;
   min-height: 100vh;
@@ -12,4 +6,21 @@
 
 #site-content {
   flex: 1;
+}
+
+.nav p{
+  font-weight: bold;
+  font-size: 14px;
+  margin: auto;
+  color: #0c2f5c
+}
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-brand img {
+  padding: 7px 14px;
+  width: 8rem;
 }
