--- a/client/src/indexPage.css
+++ b/client/src/indexPage.css
@@ -42,7 +42,11 @@
   color: #0c2f5c;
 }
 
-.custom-button {
+.group {
+  margin: 5rem auto;
+}
+
+.group > .custom-button {
   font-weight: bold;
 
   border: 2px solid #0c2f5c;
@@ -55,11 +59,7 @@
   color: #0c2f5c;
 }
 
-.custom-button:hover {
+.group > .custom-button:hover {
   background-color: #0c2f5c;
   color: white;
-}
-
-.group {
-  margin: 5rem auto;
 }
