--- a/client/src/Footer.css
+++ b/client/src/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   padding: 5rem;
-  margin-top: 5rem;
+  /*margin-top: 5rem;*/
 
   text-align: center;
   background-color: rgb(51, 51, 51);
