--- a/client/src/SearchConditions.css
+++ b/client/src/SearchConditions.css
@@ -1,16 +1,20 @@
-#background {
-  background-color: #2196f3;
-}
-
 #search-conditions {
   margin-top: -20px;
-  background-color: inherit;
-  border: none;
+  /*padding-left: 8rem;
+  padding-right: 8rem;*/
+
+  background-color: #0c2f5c;
+
+  display: flex;
+  flex-flow: row wrap;
+  justify-content:space-around;
 }
 
 #search-bar {
-  max-width: 30rem;
+  margin: 1rem 2rem;
+  width: 30rem;
 }
 
-.condition {
+.search-item {
+  margin: 1rem 2rem;
 }
