--- a/client/src/indexPage.css
+++ b/client/src/indexPage.css
@@ -46,7 +46,7 @@
   margin: 5rem auto;
 }
 
-.group > .custom-button {
+.group .custom-button {
   font-weight: bold;
 
   border: 2px solid #0c2f5c;
@@ -59,7 +59,7 @@
   color: #0c2f5c;
 }
 
-.group > .custom-button:hover {
+.group .custom-button:hover {
   background-color: #0c2f5c;
   color: white;
 }
