--- a/client/src/Label.css
+++ b/client/src/Label.css
@@ -1,13 +1,24 @@
-#custom-label {
-  /*padding: 1rem;*/
-  font-size: 2rem;
+.custom-label {
+  /*border: 1px solid red;*/
 
-  margin-right: 1rem;
+  background-color: lightgrey;
+  padding: 5px 15px;
+
+  margin-right: 10px;
 }
 
-.custom-button {
+.custom-label span {
+  color: #0c2f5c;
+}
+
+.custom-label > .custom-button {
   background-color: inherit;
   border: none;
 
-  margin-left: 1rem;
+  margin-left: 10px;
+  font-weight: bold;
+}
+
+.custom-label.green {
+  background-color: yellowgreen;
 }
