--- a/client/src/SearchConditions.css
+++ b/client/src/SearchConditions.css
@@ -1,4 +1,4 @@
-#search-conditions {
+.search-conditions {
   margin-top: -20px;
   padding-left: 5rem;
 
@@ -9,11 +9,11 @@
   background-color: #0c2f5c;
 }
 
-#search-bar {
+.search-conditions #search-bar {
   margin: 1rem 1rem 1rem 0;
   width: 30rem;
 }
 
-.search-item {
+.search-conditions .search-item {
   margin: 1rem 1rem;
 }
