update details in forgot password system layout

--- a/client/src/LogForm.css
+++ b/client/src/LogForm.css
@@ -6,6 +6,12 @@
     padding-left:10px;
     padding-right:10px;
 }
+
+#formInput2{
+    padding-left:10px;
+    padding-right:10px;
+}
+
 #loginSubButton{
 //    margin-left:50px;
 //    width:200%;
