User can save houses to redux, redux notifies backend with async post request

--- a/client/src/HouseListItem.css
+++ b/client/src/HouseListItem.css
@@ -80,6 +80,6 @@
   width: 35px;
 }
 
-.house-item .like:hover {
+.house-item .like.confirmed {
   background-image: url('./images/likeAfter.png');
 }
