update icon and font size; create phone and address in db

--- a/client/src/MyProfile.css
+++ b/client/src/MyProfile.css
@@ -1,6 +1,7 @@
-#profileTabs{
-    padding-left:10rem;
-    padding-right:10rem;
+.profileTabs{
+    margin-top:-1rem;
+//    padding-left:10rem;
+//    padding-right:10rem;
 }
 
 
