--- a/client/src/MyProfileDetail.css
+++ b/client/src/MyProfileDetail.css
@@ -2,27 +2,55 @@
     margin-top:1rem;
 }
 
+.profileHeader{
+    display:flex;
+    margin-left:1rem;
+//    background-color:#0c2f5c;
+}
+.profileHeader p{
+    font-weight:bold;
+    font-size:30px;
+    color:#23527c;
+}
+
 #ProfileIcon{
-   font-size:18px;
+   font-size:19px;
 }
 
 .profileSubItem{
-    margin-top:1rem;
+    flex:1;
+    padding-top:12px;
+//    padding-bottom:1%;
     display:flex;
-//    height:5rem;
+}
+
+.subItem{
+   
+}
+
+.subItem :hover{
+    //    height:50px;
+    color:white;
+    background-color:#64d2d2;
 }
 
 .subItemLable{
+    margin-left:1rem;
 }
 
 .subItemEditLable{
-//    margin-left:1rem;
+    margin-right:1rem;
 //    flex:1;
- }
+}
 
-.profileSubItem p{
+
+.subItemContent{
     margin-left:1rem;
     flex:1;
     font-weight:bold;
-    font-size:16px;
- }
+    font-size:17px;
+}
+
+.profileFooter p{
+    padding-left:1rem;
+}
