--- a/client/src/MyProfileDetail.css
+++ b/client/src/MyProfileDetail.css
@@ -64,10 +64,42 @@
 .profileFooter p{
     padding-bottom:1rem;
     padding-left:1rem;
-    color:#64d2d2
+    color:rgb(51, 51, 51);
 }
 
 #biopanel{
     word-break:break-all;
 }
 		   
+.newUserInfoSubForm{
+    display:flex;
+    margin-bottom:1rem;
+}
+
+.newUserInfoSubLabel{
+    flex:2;
+    padding-top:7px;
+}
+
+.newUserInfoSubInput{
+    align-self: flex-start;
+    flex:10;
+}
+
+.newUserInfoSubInputName{
+    flex:10;
+    display:flex;
+}
+
+.newUserInfoSubInputLastName{
+    flex:5;
+}
+
+.newUserInfoSubInputFirstName{
+    flex:5;
+    padding-right:1rem;
+}
+
+.profileNewInfoSubButton{
+//    padding-top:3rem;
+}
