--- a/client/src/Label.css
+++ b/client/src/Label.css
@@ -2,8 +2,11 @@
   background-color: lightgrey;
   padding: 5px 15px;
 
-  margin-right: 10px;
-  margin-top: 10px;
+  margin-right: 1rem;
+}
+
+.custom-label p {
+  white-space: nowrap;
 }
 
 .custom-label span {
