--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,40 @@
+@media (max-width: 1024px) {
+    .navbar-header {
+	float: none;
+    }
+    .navbar-left,.navbar-right {
+	float: none !important;
+    }
+    .navbar-toggle {
+	display: block;
+    }
+    .navbar-collapse {
+	border-top: 1px solid transparent;
+	box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+	top: 0;
+	border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+	display: none!important;
+    }
+    .navbar-nav {
+	float: none!important;
+	margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+	float: none;
+    }
+    .navbar-nav>li>a {
+	padding-top: 10px;
+	padding-bottom: 10px;
+    }
+    .collapse.in{
+	display:block !important;
+    }
+}
+
 #site {
   display: flex;
   min-height: 100vh;
@@ -17,8 +54,9 @@
 }
 
 #site-content {
-  flex: 1;
+    flex: 1;
 }
+
 
 .nav p{
   font-weight: bold;
@@ -29,9 +67,9 @@
 
 #dropdown-custom-1{
     font-weight: bold;
-  font-size: 14px;
-  margin: auto;
-  color: #0c2f5c
+    font-size: 14px;
+    margin: auto;
+    color: #0c2f5c
 }
 
 .navbar-brand {
@@ -43,3 +81,8 @@
   padding: 7px 14px;
   width: 8rem;
 }
+
+// an example for changing navbar breakpoint to 888px.
+// https://www.bootply.com/120604
+
+
