--- a/client/src/MyProfileDetail.css
+++ b/client/src/MyProfileDetail.css
@@ -37,7 +37,7 @@
 .subItem :hover{
     //    height:50px;
     color:white;
-    background-color:#64d2d2;
+    background-color:#5bc0de;
 }
 
 .subItemLable{
