--- a/client/src/HouseList.css
+++ b/client/src/HouseList.css
@@ -1,6 +1,5 @@
 .house-list .list-header {
-  margin: 2rem auto;
-
+//  margin: 2rem auto;
   display: flex;
   justify-content: space-between;
 }
@@ -15,4 +14,20 @@
 
 .house-list .list-header span:last-of-type > div {
   float: right;
+}
+
+.map_and_list{
+    height:80vh;
+    width:100vw;
+    display:flex;
+}
+
+.map_on_the_left{
+    flex:1;
+    width:50%;
+}
+
+.list_on_the_right{
+    flex:1;
+    width:50%;
 }
