update HouseList.js, split page and display map

--- a/client/src/HouseList.css
+++ b/client/src/HouseList.css
@@ -1,3 +1,9 @@
+.house_list_all{
+    height:calc(100vh - 50px);
+    width:100vw;
+//    background-color:green;
+}
+
 .house-list .list-header {
 //  margin: 2rem auto;
   display: flex;
@@ -16,18 +22,43 @@
   float: right;
 }
 
-.map_and_list{
-    height:80vh;
-    width:100vw;
-    display:flex;
+@media screen and (min-width: 768px){
+    .map_and_list{
+//	display:flex;
+	height:calc(100vh - 140px);
+//	flex-grow:1;
+//	overflow: hidden;
+//	background-color:red;
+    }
+
+    .map_on_the_left{
+	width: 50vw;
+	float: left;
+	height:calc(100vh - 140px);
+//	background-color:blue;
+    }
+
+    .list_on_the_right{
+	float: right;
+	width: 50vw;
+//	background-color:red;
+	height:calc(100vh - 140px);
+	overflow: auto;
+    }
 }
 
-.map_on_the_left{
-    flex:1;
-    width:50%;
-}
-
-.list_on_the_right{
-    flex:1;
-    width:50%;
+@media screen and (max-width: 768px){
+    .map_and_list{
+	display:flex;
+    }
+    
+    .map_on_the_left{
+	flex:0;
+	width:50%;
+    }
+    
+    .list_on_the_right{
+	flex:1;
+//	width:50%;
+    }
 }
