--- a/client/src/Footer.css
+++ b/client/src/Footer.css
@@ -26,7 +26,7 @@
 }
 
 .footer #social-network-links {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-end;
+//  display: flex;
+//  flex-flow: row nowrap;
+//  justify-content: flex-end;
 }
