--- a/client/src/HouseList.css
+++ b/client/src/HouseList.css
@@ -1,26 +1,34 @@
 .house_list_all{
     height:calc(100vh - 50px);
     width:100vw;
-//    background-color:green;
 }
 
-.house-list .list-header {
-//  margin: 2rem auto;
+.house_list_all .list-header {
+  padding: .5rem 5rem .5rem 5rem;
   display: flex;
   justify-content: space-between;
 }
 
-.house-list .list-header span:first-of-type {
+.house_list_all .list-header span:first-of-type {
   flex: 2;
 }
 
-.house-list .list-header span:last-of-type {
+.house_list_all .list-header span:last-of-type {
   flex: 1;
 }
 
-.house-list .list-header span:last-of-type > div {
+.house_list_all .list-header span:last-of-type > div {
   float: right;
 }
+
+.house_list_all .list_on_the_right{
+  padding-left: 1rem;
+}
+
+.house_list_all #thumbnail_list{
+  min-height: 70vh;
+}
+
 
 @media screen and (min-width: 768px){
     .map_and_list{
@@ -51,12 +59,12 @@
     .map_and_list{
 	display:flex;
     }
-    
+
     .map_on_the_left{
 	flex:0;
 	width:50%;
     }
-    
+
     .list_on_the_right{
 	flex:1;
 //	width:50%;
