--- a/client/src/Thumbnail.css
+++ b/client/src/Thumbnail.css
@@ -31,6 +31,8 @@
   font-family: 'roboto', sans-serif;
   font-size: 24px;
   line-height: 36px;
+
+  background-color: rgba(0,0,0,.5)
 }
 
 .thumbnail .like-button {
