--- a/client/src/SearchBar.css
+++ b/client/src/SearchBar.css
@@ -1,22 +1,17 @@
-.search-bar {
-  position: relative;
+.searchbar-input {
+  float: left;
 }
 
-.search-bar .dropdown {
-  background-color: white;
-  padding: 1rem;
+.searchbar-button {
+  float: left;
 
-  position: absolute;
-  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
 
-  z-index: 1;
-}
+  color: white;
+  background-color: orange;
 
-.search-bar .dropdown div {
-  line-height: 3rem;
   cursor: pointer;
-}
-
-.search-bar .dropdown div:hover {
-  background-color: #f1f1f1;
 }
