Labels could be added and canceled in house list page

--- a/client/src/SearchBarWithBreadcrumbs.css
+++ b/client/src/SearchBarWithBreadcrumbs.css
@@ -7,6 +7,10 @@
   background-color: #163059;
 }
 
+.search-bar-with-breadcrumbs #search-bar{
+  width: 30rem;
+}
+
 .search-bar-with-breadcrumbs ul.custom-breadcrumb {
   list-style: none;
   color: white;
