--- a/client/src/SearchBarWithConditions.css
+++ b/client/src/SearchBarWithConditions.css
@@ -18,3 +18,9 @@
 
   margin: auto 1rem auto 0;
 }
+
+.list-header {
+  padding: 0.5rem 5rem 0.5rem 5rem;
+  display: flex;
+  justify-content: space-between;
+}
