--- a/client/src/Thumbnail.css
+++ b/client/src/Thumbnail.css
@@ -13,7 +13,6 @@
   height: 20rem;
   width: 30rem;
   overflow: hidden;
-
   position: relative;
   color: white;
 }
@@ -39,14 +38,24 @@
   position: absolute;
   top: 1rem;
   right: 1rem;
-
   background-color: inherit;
   background-image: url('./images/likeBefore.png');
   background-repeat: no-repeat;
   background-size: contain;
-
   border: none;
+  height: 30px;
+  width: 35px;
+}
 
+.thumbnail .like-button:hover{
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background-color: inherit;
+  background-image: url('./images/logo.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: none;
   height: 30px;
   width: 35px;
 }
