--- a/client/src/Thumbnail.css
+++ b/client/src/Thumbnail.css
@@ -27,7 +27,7 @@
   bottom: 0;
   left: 1rem;
 
-  font-family: 'roboto', sans-serif;
+  font-family: 'Gotham', sans-serif;
   font-size: 24px;
   line-height: 36px;
 
