--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,37 +1,6 @@
-@media (max-width: 1024px) {
-    .navbar-header {
-	float: none;
-    }
-    .navbar-left,.navbar-right {
-	float: none !important;
-    }
-    .navbar-toggle {
-	display: block;
-    }
-    .navbar-collapse {
-	border-top: 1px solid transparent;
-	box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-	top: 0;
-	border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-	display: none!important;
-    }
-    .navbar-nav {
-	float: none!important;
-	margin-top: 7.5px;
-    }
-    .navbar-nav>li {
-	float: none;
-    }
-    .navbar-nav>li>a {
-	padding-top: 10px;
-	padding-bottom: 10px;
-    }
-    .collapse.in{
-	display:block !important;
+@media (min-width: 700px) and (max-width: 1024px) {
+    .nav p{
+      font-size: 12px !important;
     }
 }
 
@@ -60,7 +29,7 @@
 
 .nav p{
   font-weight: bold;
-  font-size: 14px;
+  font-size: 16px;
   margin: auto;
   color: #0c2f5c
 }
