update thumbnail css for 50% media query

--- a/client/src/HouseList.css
+++ b/client/src/HouseList.css
@@ -11,6 +11,10 @@
   min-height: 70vh;
 }
 
+.list-on-the-right-content{
+        min-height:50vh;        
+}
+
 .houseListFooter{
     margin-left:-1em;
 }
