--- a/client/src/Thumbnail.css
+++ b/client/src/Thumbnail.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 .thumbnail {
-  width: 48%;
+//  width: 48%;
   margin-right: 10px;
 }
 
