--- a/client/src/css/Thumbnail.css
+++ b/client/src/css/Thumbnail.css
@@ -35,7 +35,7 @@
   top: 1rem;
   right: 1rem;
   background-color: inherit;
-  background-image: url('./images/likeBefore.png');
+  background-image: url('../images/likeBefore.png');
   background-repeat: no-repeat;
   background-size: contain;
   border: none;
@@ -48,7 +48,7 @@
   top: 1rem;
   right: 1rem;
   background-color: inherit;
-  background-image: url('./images/logo.png');
+  background-image: url('../images/logo.png');
   background-repeat: no-repeat;
   background-size: contain;
   border: none;
@@ -57,7 +57,7 @@
 }
 
 .thumbnail .like-button.confirmed {
-  background-image: url('./images/likeAfter.png');
+  background-image: url('../images/likeAfter.png');
 }
 
 .thumbnail .caption-area {
