--- a/client/src/css/indexPage.css
+++ b/client/src/css/indexPage.css
@@ -1,5 +1,5 @@
 .index-page #search-area {
-  background-image: url('./images/index_page/home_background.png');
+  background-image: url('../images/index_page/home_background.png');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
